DUnion.GeneratorTests/TestCases/Wrapped/Valid/CaseStruct.source.cs
using DUnion;

namespace Wrapped.Valid.CaseStruct;

[DUnion]
public readonly partial record struct Union
{
    public struct Case
    {
    }
}