DUnion.GeneratorTests/TestCases/Wrapped/Invalid/UnionEmpty.source.cs
using DUnion;

namespace Wrapped.Invalid.UnionEmpty;

[DUnion]
public readonly partial record struct Union 
{
}